# expert_system

./: Cargo.toml  LICENSE  bonus  todo
src/: file.test  main.rs  p2.rs  parser.rs  rule.rs  token.rs
src/tests/: eval.rs  mod.rs  p2.rs  parser.rs  rules.rs
src/tests/in/: example  simple  tests  unicode
