[package]
name = "expert_system"
version = "1.0.0"
authors = ["dlancar <dlancar@student.42.fr>",
           "mde-jesu <mde-jesu@student.42.fr>"]

[dependencies]
unicode-segmentation = "0.1.2"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`
